fix(search): prevent search results to be always visible in IE9

--- a/styles/_search.less
+++ b/styles/_search.less
@@ -37,6 +37,7 @@
 
 
 .search-results {
+  opacity: 0;
   position: fixed;
   top: @header-height;
   left: 5%;
@@ -45,7 +46,7 @@
   z-index: 7;
 
   transform: translateY(0 - (@grid-gutter-width * 2));
-  transition: transform 0.218s ease;
+  transition: transform 0.218s ease, opacity 0.218s ease;
 
   background-color: @body-bg;
   border: 1px solid @gray-light;
@@ -134,6 +135,7 @@
 
 body.search-open {
   .search-results {
+    opacity: 1;
     transform: translateY(0);
     ul {
       max-height: 500px;
